--- a/javascript/형변환.md
+++ b/javascript/형변환.md
@@ -311,7 +311,7 @@ console.log(num + str, typeof (num + str)) // "1010" "string"
   class Foo {};
   class Bar {};
   
-  Foo foo = new Bar();
+  Foo foo = new Bar(); //ERROR
   ```
 
   + 클래스에서도 Foo와 Bar은 서로 호환이 불가능한 클래스 이다.
