--- a/javascript/형변환.md
+++ b/javascript/형변환.md
@@ -291,6 +291,8 @@ console.log(num + str, typeof (num + str)) // "1010" "string"
   + 1과 "1" , true도 동일한 관계를 갖는다.
   + 타입에 엄격하지 않은 == 연산자를 대체하여 엄격한 === 연산자를 사용해 동등 비교 한다.
 
+CodeSandBox: https://codesandbox.io/s/priceless-night-4eh9p
+
 ### 명칭적 타이핑(Nominal Typing)
 
 + 명칭적 타이핑은 특정 키워드를 통하여 타입을 지정해 사용하는 방식이다.
@@ -404,6 +406,7 @@ console.log("Pelican is of Duck type: " + checkDuck(pelican)); //true
 console.log("Duck is of Duck type: " + checkDuck(duck)); //true
 console.log("Platypus is of Duck type: " + checkDuck(platypus)); //false
 ```
++ CodeSandBox: https://codesandbox.io/s/zen-https-yd9hp?file=/src/index.js
 
 + TypeScript 예시
 
@@ -437,4 +440,4 @@ function startTalk(people: People): void {
 startTalk(humanInstance); // --- 1) "say human : 말할 수 있어요"
 startTalk(robotInstance); // --- 2) "say robot : 말할 수 있어요"
 ```
-
++ CodeSandBox:  https://codesandbox.io/s/heuristic-benji-p6e82
